<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- ads id -->
    <string name="ads_id">ca-app-pub-3079535828134132/4288687405</string>
    <string name="app_id">854947141185631</string>
<!--     test app -->
<!--     <string name="app_id">1427997650838474</string> -->

    <string name="app_name">Message Backup for facebook</string>
    <string name="app_main_title">Facebook Messages</string>
    <string name="action_logout">Logout</string>
    <string name="action_downloads">Downloads</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fbauth">FB Login</string>
    <string name="login_message1">App will directly communicate with facebook servers</string>
    <string name="login_message2">It will not upload/save your messages in any location except your device</string>
    <string name="title_activity_options">Select Options</string>
    <string name="title_activity_status">Download</string>
    <string name="title_activity_folder_browser">View Files</string>
    <string name="title_downloader_service">FB Msg Backup</string>
    <string name="title_activity_about">About</string>
    <string name="unknown">Unknown</string>
    <string name="file_msg">File number suffix will be added to the file name.\nIf you are downloading more than 5000, multiple files will be created containing 5000 messages in each</string>
    <string name="thread_between">Conversation with #</string>
    <string name="msg_from_to">From # message to @</string>
    <string name="output_file_name">Output folder name #</string>
    <string name="downloading">Downloading...</string>
    <string name="download_complete">Download complete</string>
    
    <string name="about_dev">Developed by Chamika Weerasinghe</string>
    <string name="lib_prefix">Following libraries are included with this application</string>
    <string name="lib_usages">*AppCompat\n*JakeWharton/viewpagerindicator\n*chrisbanes/actionbar-pulltorefresh\n*commonsguy/cwac-endless</string>
    <string name="rate_app">Rate App</string>

</resources>