<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.chamika.fbmsgbackup.activity.MainActivity" >
      <item
        android:id="@+id/action_download"
        android:orderInCategory="100"
        android:title="@string/action_downloads"
        android:icon="@drawable/ic_download"
        app:showAsAction="always"/>

      <item
        android:id="@+id/action_logout"
        android:orderInCategory="200"
        android:title="@string/action_logout"
        android:icon="@drawable/logout"
        app:showAsAction="never"/>
      
      <item
        android:id="@+id/action_refresh"
        android:orderInCategory="300"
        android:title="@string/action_refresh"
        app:showAsAction="never"/>
      
      <item
        android:id="@+id/action_about"
        android:orderInCategory="400"
        android:title="@string/action_about"
        app:showAsAction="never"/>

</menu>
