<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/text_recipients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:text="@string/thread_between"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_msg_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_recipients"
        android:layout_margin="10dp"
        android:text="@string/msg_from_to"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_filename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_msg_count"
        android:layout_margin="10dp"
        android:text="@string/output_file_name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_filename"
        android:layout_margin="10dp"
        android:text="@string/downloading"
        android:textColor="#000000"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/progressBar_job"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_status"
        android:layout_marginTop="22dp" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar_job"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/blue_button_selector"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:text="Stop"
        android:textColor="#fff"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_show_folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar_job"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/blue_button_selector"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:text="Open Folder"
        android:textColor="#fff"
        android:textStyle="bold"
        android:visibility="visible" />

</RelativeLayout>